<resources>
    <string name="app_name">Dicoding Event</string>

    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_active">Active</string>
    <string name="nav_menu_finished">Finished</string>
    <string name="nav_menu_favorite">Favorite</string>
    <string name="nav_menu_settings">Settings</string>

    <string name="content_desc_event">Event Cover</string>
    <string name="content_desc_favorite">Favorite</string>

    <string name="title">Dicoding Event</string>
    <string name="subtitle_active">Upcoming Events</string>
    <string name="subtitle_finished">Finished Events</string>
    <string name="subtitle_favorite">Favorite Events</string>
    <string name="subtitle_setting">Settings</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="try_again">Try Again</string>
    <string name="data_not_found">%s not found!</string>
    <string name="data_is_empty">%s is empty</string>
    <string name="search_hint">Search here…</string>

    <string name="desc_event_upcoming">Discover events near you that match your interests.</string>
    <string name="desc_event_favorite">Your favorite events will appear here.</string>
    <string name="desc_setting_dark_mode">Enable dark mode</string>
    <string name="desc_setting_daily_reminder">Enable notification</string>

    <string name="remaining_quota">Quota: %1$d</string>
    <string name="description">Description</string>
    <string name="btn_register">Register</string>
</resources>