<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Theme.Text.Heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/subtitle_setting"
        android:textSize="@dimen/font_28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_dark_mode"
        style="@style/Theme.Text.Base.Bold"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_subtitle_dark_mode"
        style="@style/Theme.Text.Base"
        android:text="@string/desc_setting_dark_mode"
        android:textColor="@color/colorHint"
        android:textSize="@dimen/font_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_dark_mode" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="@+id/tv_subtitle_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_dark_mode"
        app:switchPadding="@dimen/padding_default"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <TextView
        android:id="@+id/tv_title_daily_reminder"
        style="@style/Theme.Text.Base.Bold"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/daily_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_dark_mode" />

    <TextView
        android:id="@+id/tv_subtitle_daily_reminder"
        style="@style/Theme.Text.Base"
        android:text="@string/desc_setting_daily_reminder"
        android:textColor="@color/colorHint"
        android:textSize="@dimen/font_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_daily_reminder" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="@+id/tv_subtitle_daily_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_daily_reminder"
        app:switchPadding="@dimen/padding_default"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

</androidx.constraintlayout.widget.ConstraintLayout>