<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorWhite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                tools:layout_height="224dp"
                tools:src="@tools:sample/backgrounds/scenic" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorTransparent"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-24dp"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardElevation="0dp"
            app:shapeAppearanceOverlay="@style/Theme.Shape.TopHalfRoundedSquare"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_default">

                <TextView
                    android:id="@+id/tv_category"
                    style="@style/Theme.Text.Base"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:background="@drawable/bg_category"
                    android:paddingHorizontal="@dimen/padding_default"
                    android:paddingVertical="@dimen/padding_2dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorHint"
                    android:textSize="@dimen/font_10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Seminar" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/Theme.Text.Heading"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/font_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category"
                    tools:text="IDCamp x Dicoding Live #5 - Jetpack Compose: Masa Depan UI Development di Android" />

                <TextView
                    android:id="@+id/tv_owner_name"
                    style="@style/Theme.Text.Base"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorHint"
                    android:textSize="@dimen/font_10sp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_begin_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    tools:text="By: Indosat Ooredoo Hutchison Digital Camp" />

                <TextView
                    android:id="@+id/tv_begin_time"
                    style="@style/Theme.Text.Base"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorHint"
                    android:textSize="@dimen/font_10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_owner_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    tools:text="Jan, 17 2025" />

                <TextView
                    android:id="@+id/tv_quota"
                    style="@style/Theme.Text.Base"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorHint"
                    android:textSize="@dimen/font_10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_owner_name"
                    tools:text="Quota: 999" />

                <TextView
                    android:id="@+id/tv_desc_label"
                    style="@style/Theme.Text.Heading"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/description"
                    android:textSize="@dimen/font_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_quota" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/Theme.Text.Base"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:textSize="@dimen/font_12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_desc_label"
                    tools:text="@tools:sample/lorem" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:paddingHorizontal="@dimen/padding_64dp"
                    android:text="@string/btn_register"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    app:cornerRadius="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/colorWhite"
        android:contentDescription="@string/content_desc_favorite"
        app:elevation="8dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_favorite"
        app:tint="@color/colorPrimary" />

    <include
        android:id="@+id/layout_error"
        layout="@layout/layout_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="4dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorLoading"
        tools:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>